@@ -28,8 +28,11 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::GatherDir" => 0,
     "Dist::Zilla::PluginBundle::Basic" => 0,
     "Dist::Zilla::PluginBundle::Classic" => 0,
+    "Dist::Zilla::Role::Plugin" => 0,
+    "Dist::Zilla::Role::PluginBundle" => 0,
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
+    "Moose" => 0,
     "Test::More" => "0.89",
     "Test::Warnings" => 0
   },
@@ -45,11 +48,14 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::GatherDir" => 0,
   "Dist::Zilla::PluginBundle::Basic" => 0,
   "Dist::Zilla::PluginBundle::Classic" => 0,
+  "Dist::Zilla::Role::Plugin" => 0,
+  "Dist::Zilla::Role::PluginBundle" => 0,
   "Dist::Zilla::Util" => 0,
   "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
   "Module::Runtime" => 0,
   "Moo" => "1.000008",
+  "Moose" => 0,
   "Test::More" => "0.89",
   "Test::Warnings" => 0,
   "strict" => 0,
