@@ -24,8 +24,14 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  - Test::EOL
  - Test::More 0.96
 
+ [Added / test recommends]
+ - Moose 2.000
+
  [Added / test requires]
  - Dist::Zilla::Plugin::GatherDir
+ - Dist::Zilla::Role::Plugin
+ - Dist::Zilla::Role::PluginBundle
+ - Moose
  - Test::Warnings
  - perl 5.006
 
